# bd_process_copyrights

./: README.md  pyproject.toml  run.py
bd_process_copyrights/: BOMClass.py  ComponentClass.py  ComponentListClass.py  ConfigClass.py  UIClass.py  main.py
