[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bd_process_copyrights",
version = "1.0"
authors = [
  { name="Matthew Brady", email="mbrad@blackduck.com" },
]
description = "bd_process_copyrights - identify components without copyrights and populate copyrights from other origins or from local copyright search",
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "blackduck>=1.1.3",
    "requests",
    "aiohttp",
    "asyncio"
]

[project.urls]
Homepage = "https://github.com/matthewb66/bd_process_copyrights"
Issues = "https://github.com/matthewb66/bd_process_copyrights/issues"

[project.scripts]
bd-scan-yocto-via-sbom = "bd_process_copyrights:main.main"
